Fix [Models] Sources overflows container in Details pane (#819)

--- a/src/components/ArtifactInfoSources/artifactInfoSources.scss
+++ b/src/components/ArtifactInfoSources/artifactInfoSources.scss
@@ -18,6 +18,10 @@
     padding: 18px 25px;
     cursor: pointer;
 
+    &_empty {
+      padding: 18px 8px;
+    }
+
     &__header {
       min-width: 100px;
       font-weight: bold;
@@ -78,14 +82,19 @@
       display: flex;
       flex-direction: row;
       align-items: center;
-      height: 56px;
+      min-height: 56px;
       border-bottom: $secondaryBorder;
+
+      &-value {
+        word-break: break-word;
+      }
 
       &:last-child {
         border: none;
       }
 
       &-key {
+        width: 220px;
         min-width: 220px;
         padding-left: 18px;
       }
